# expenses-tracker-api

./: .env.example  .gitignore  Dockerfile.local  Dockerfile.prod  LICENSE  conftest.py  pyproject.toml
.zed/: tasks.json
api/: config.py  database.py  dependencies.py  exceptions.py  log_config.py  main.py  models.py  spreadsheet_migration.py  tasks.py  utils.py
api/routers/: budgets.py  categories.py  cycles.py  expenses.py  incomes.py  recurrent_budgets.py  recurrent_expenses.py  recurrent_incomes.py  recurrent_savings.py  sandbox.py  savings.py  users.py
api/tests/: test_budgets.py  test_categories.py  test_expenses.py  test_incomes.py  test_recurrent_budgets.py  test_recurrent_expenses.py  test_recurrent_incomes.py  test_recurrent_savings.py  test_savings.py  test_tasks.py  test_user.py  test_util.py
api/tests/fixtures/: client_fixtures.py  session_db_fixtures.py  users_fixtures.py
app/: .env.example  cleaning_functions.py  exceptions.py  main.py  models.py  outlook_email.py  protocols.py  utils.py
app/src/: cleaning_functions.py  email_source_mappings.py  exceptions.py  models.py  outlook_email.py  protocols.py  utils.py
app/src/email_providers/: outlook_email.py
app/src/target_consumers/: expenses_tracker_api.py
app/tests/: test_cleaning_functions.py  test_mappings.py  test_outlook.py  test_utils.py
app/tests/mocks/: email_mocks.py
