[tool.poetry]
name = "expenses-tracker"
version = "0.1.0"
description = "Script to register expenses that comes via email to a google docs spreedsheet"
authors = ["Jairo Leyton <jali1993@hotmail.com>"]
readme = "README.md"
packages = [{include = "expenses_tracker"}]

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.71.0"
python-dotenv = "^0.21.1"
pytest = "^7.4.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
