[tool.poetry]
name = "expenses-tracker"
version = "0.1.0"
description = "Script to register expenses that comes via email to a google docs spreedsheet"
authors = ["Jairo Leyton <jali1993@hotmail.com>"]
readme = "README.md"
packages = [{include = "expenses_tracker"}]

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.71.0"
python-dotenv = "^0.21.1"
pytest = "^7.4.1"
beautifulsoup4 = "^4.12.2"
fastapi = {version = "0.*", extras = ["standard"]}
uvicorn = {version = "^0.27.1 ", extras = ["standard"]}
sqlmodel = "0.0.*"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
freezegun = "^1.5.1"
mangum = "^0.17.0"
pyjwt = {version = "^2.9.0", extras = ["crypto"]}
cryptography = "^43.0.0"
poetry = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage]
[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    '*/.local/*',
    '__init__.py',
    'tests/*',
    '*/tests/*',
    # omit anything in a .venv directory anywhere
    '.venv/*',
    'api/exceptions.py',
    'api/config.py',
    'api/models.py'
]

[tool.coverage.report]
skip_empty = true
